turbopack/crates/turbo-tasks-macros-tests/tests/function/fail_non_local_static.stderr
error[E0277]: the trait bound `IntegersVec: NonLocalValue` is not satisfied
  --> tests/function/fail_non_local_static.rs:10:25
   |
10 | #[turbo_tasks::function(non_local_return)]
   |                         ^^^^^^^^^^^^^^^^ the trait `NonLocalValue` is not implemented for `IntegersVec`
   |
   = help: the following other types implement trait `NonLocalValue`:
             &T
             &mut T
             ()
             (A, Z, Y, X, W, V, U, T)
             (B, A, Z, Y, X, W, V, U, T)
             (C, B, A, Z, Y, X, W, V, U, T)
             (D, C, B, A, Z, Y, X, W, V, U, T)
             (E, D, C, B, A, Z, Y, X, W, V, U, T)
           and $N others
note: required by a bound in `assert_returns_non_local_value`
  --> $WORKSPACE/turbopack/crates/turbo-tasks/src/macro_helpers.rs
   |
   | pub fn assert_returns_non_local_value<ReturnType, Rv>()
   |        ------------------------------ required by a bound in this function
...
   |     Rv: NonLocalValue + Send,
   |         ^^^^^^^^^^^^^ required by this bound in `assert_returns_non_local_value`
